# crates/espresso/api/src/generated/espresso.api.v2.serde.rs
@@ -481,103 +481,12 @@ impl serde::Serialize for Empty {
         S: serde::Serializer,
     {
         use serde::ser::SerializeStruct;
-        let mut len = 0;
-        if self.dummy.is_some() {
-            len += 1;
-        }
-        let mut struct_ser = serializer.serialize_struct("espresso.api.v2.Empty", len)?;
-        if let Some(v) = self.dummy.as_ref() {
-            struct_ser.serialize_field("dummy", v)?;
-        }
+        let len = 0;
+        let struct_ser = serializer.serialize_struct("espresso.api.v2.Empty", len)?;
         struct_ser.end()
     }
 }
 impl<'de> serde::Deserialize<'de> for Empty {
-    #[allow(deprecated)]
-    fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
-    where
-        D: serde::Deserializer<'de>,
-    {
-        const FIELDS: &[&str] = &[
-            "dummy",
-        ];
-
-        #[allow(clippy::enum_variant_names)]
-        enum GeneratedField {
-            Dummy,
-        }
-        impl<'de> serde::Deserialize<'de> for GeneratedField {
-            fn deserialize<D>(deserializer: D) -> std::result::Result<GeneratedField, D::Error>
-            where
-                D: serde::Deserializer<'de>,
-            {
-                struct GeneratedVisitor;
-
-                impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
-                    type Value = GeneratedField;
-
-                    fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
-                        write!(formatter, "expected one of: {:?}", &FIELDS)
-                    }
-
-                    #[allow(unused_variables)]
-                    fn visit_str<E>(self, value: &str) -> std::result::Result<GeneratedField, E>
-                    where
-                        E: serde::de::Error,
-                    {
-                        match value {
-                            "dummy" => Ok(GeneratedField::Dummy),
-                            _ => Err(serde::de::Error::unknown_field(value, FIELDS)),
-                        }
-                    }
-                }
-                deserializer.deserialize_identifier(GeneratedVisitor)
-            }
-        }
-        struct GeneratedVisitor;
-        impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
-            type Value = Empty;
-
-            fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
-                formatter.write_str("struct espresso.api.v2.Empty")
-            }
-
-            fn visit_map<V>(self, mut map_: V) -> std::result::Result<Empty, V::Error>
-                where
-                    V: serde::de::MapAccess<'de>,
-            {
-                let mut dummy__ = None;
-                while let Some(k) = map_.next_key()? {
-                    match k {
-                        GeneratedField::Dummy => {
-                            if dummy__.is_some() {
-                                return Err(serde::de::Error::duplicate_field("dummy"));
-                            }
-                            dummy__ = map_.next_value()?;
-                        }
-                    }
-                }
-                Ok(Empty {
-                    dummy: dummy__,
-                })
-            }
-        }
-        deserializer.deserialize_struct("espresso.api.v2.Empty", FIELDS, GeneratedVisitor)
-    }
-}
-impl serde::Serialize for EmptyData {
-    #[allow(deprecated)]
-    fn serialize<S>(&self, serializer: S) -> std::result::Result<S::Ok, S::Error>
-    where
-        S: serde::Serializer,
-    {
-        use serde::ser::SerializeStruct;
-        let len = 0;
-        let struct_ser = serializer.serialize_struct("espresso.api.v2.EmptyData", len)?;
-        struct_ser.end()
-    }
-}
-impl<'de> serde::Deserialize<'de> for EmptyData {
     #[allow(deprecated)]
     fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
     where
@@ -616,24 +525,24 @@ impl<'de> serde::Deserialize<'de> for EmptyData {
         }
         struct GeneratedVisitor;
         impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
-            type Value = EmptyData;
+            type Value = Empty;
 
             fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
-                formatter.write_str("struct espresso.api.v2.EmptyData")
+                formatter.write_str("struct espresso.api.v2.Empty")
             }
 
-            fn visit_map<V>(self, mut map_: V) -> std::result::Result<EmptyData, V::Error>
+            fn visit_map<V>(self, mut map_: V) -> std::result::Result<Empty, V::Error>
                 where
                     V: serde::de::MapAccess<'de>,
             {
                 while map_.next_key::<GeneratedField>()?.is_some() {
                     let _ = map_.next_value::<serde::de::IgnoredAny>()?;
                 }
-                Ok(EmptyData {
+                Ok(Empty {
                 })
             }
         }
-        deserializer.deserialize_struct("espresso.api.v2.EmptyData", FIELDS, GeneratedVisitor)
+        deserializer.deserialize_struct("espresso.api.v2.Empty", FIELDS, GeneratedVisitor)
     }
 }
 impl serde::Serialize for ForgottenSubtree {
@@ -3794,96 +3703,5 @@ impl<'de> serde::Deserialize<'de> for TotalRewardDistributedResponse {
             }
         }
         deserializer.deserialize_struct("espresso.api.v2.TotalRewardDistributedResponse", FIELDS, GeneratedVisitor)
-    }
-}
-impl serde::Serialize for U256 {
-    #[allow(deprecated)]
-    fn serialize<S>(&self, serializer: S) -> std::result::Result<S::Ok, S::Error>
-    where
-        S: serde::Serializer,
-    {
-        use serde::ser::SerializeStruct;
-        let mut len = 0;
-        if !self.value.is_empty() {
-            len += 1;
-        }
-        let mut struct_ser = serializer.serialize_struct("espresso.api.v2.U256", len)?;
-        if !self.value.is_empty() {
-            struct_ser.serialize_field("value", &self.value)?;
-        }
-        struct_ser.end()
-    }
-}
-impl<'de> serde::Deserialize<'de> for U256 {
-    #[allow(deprecated)]
-    fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
-    where
-        D: serde::Deserializer<'de>,
-    {
-        const FIELDS: &[&str] = &[
-            "value",
-        ];
-
-        #[allow(clippy::enum_variant_names)]
-        enum GeneratedField {
-            Value,
-        }
-        impl<'de> serde::Deserialize<'de> for GeneratedField {
-            fn deserialize<D>(deserializer: D) -> std::result::Result<GeneratedField, D::Error>
-            where
-                D: serde::Deserializer<'de>,
-            {
-                struct GeneratedVisitor;
-
-                impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
-                    type Value = GeneratedField;
-
-                    fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
-                        write!(formatter, "expected one of: {:?}", &FIELDS)
-                    }
-
-                    #[allow(unused_variables)]
-                    fn visit_str<E>(self, value: &str) -> std::result::Result<GeneratedField, E>
-                    where
-                        E: serde::de::Error,
-                    {
-                        match value {
-                            "value" => Ok(GeneratedField::Value),
-                            _ => Err(serde::de::Error::unknown_field(value, FIELDS)),
-                        }
-                    }
-                }
-                deserializer.deserialize_identifier(GeneratedVisitor)
-            }
-        }
-        struct GeneratedVisitor;
-        impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
-            type Value = U256;
-
-            fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
-                formatter.write_str("struct espresso.api.v2.U256")
-            }
-
-            fn visit_map<V>(self, mut map_: V) -> std::result::Result<U256, V::Error>
-                where
-                    V: serde::de::MapAccess<'de>,
-            {
-                let mut value__ = None;
-                while let Some(k) = map_.next_key()? {
-                    match k {
-                        GeneratedField::Value => {
-                            if value__.is_some() {
-                                return Err(serde::de::Error::duplicate_field("value"));
-                            }
-                            value__ = Some(map_.next_value()?);
-                        }
-                    }
-                }
-                Ok(U256 {
-                    value: value__.unwrap_or_default(),
-                })
-            }
-        }
-        deserializer.deserialize_struct("espresso.api.v2.U256", FIELDS, GeneratedVisitor)
     }
 }
